<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.UserDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/side_nav_bar"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">



            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@drawable/logo_one"
                android:contentDescription="logo" />



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@android:color/white"
                    android:background="@drawable/input_background"
                    android:padding="10dp"
                    android:layout_marginBottom="5dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastName"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:padding="10dp"
                    android:background="@drawable/input_background"
                    android:layout_marginBottom="5dp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/input_background"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Local Government Area"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/LGA_Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp" />


            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Occupation"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/occupation_Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp" />


            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="Indigene?"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/indigene"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioIndigene"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="Yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioYes"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:checked="true" />

                <RadioButton
                    android:text="No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/radioNo"
                    android:layout_weight="1" />

            </RadioGroup>


            <TextView
                android:text="Marital Status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/marital"
                android:textColor="@color/white"
                android:padding="10dp"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioMaritalStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="Married"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioMarried"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:checked="true" />

                <RadioButton
                    android:text="Single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/radioSingle"
                    android:layout_weight="1" />

            </RadioGroup>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Age Category"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:padding="10dp" />

                <Spinner
                    android:id="@+id/Age_Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp" />


            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/upload_details"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/upload_details"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>



    </ScrollView>



    <ProgressBar
        android:id="@+id/progressBarUser"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|top"
        android:layout_marginBottom="5dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>